Fix navbar toggle and collapse

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,7 @@ body {
     padding-top: 60px;
 }
 
+/* Navbar */
 #nav-logo {
     height: 100%;
     display: inline-block;
@@ -18,12 +19,29 @@ body {
     padding: 0px;
 }
 
-.navbar-brand,
-.navbar-nav li a {
-    height: 60px;
-    line-height: 60px;
-    padding-top: 0px;
+.navbar-toggle {
+    margin-top: 13px;
+    margin-bottom: 13px;
 }
+
+.navbar-brand,
+.navbar-fixed-top {
+    min-height: 60px;
+}
+
+.navbar-nav > li > a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    line-height: 60px;
+}
+
+@media (max-width: 767px) {
+    .navbar-nav > li > a {
+    line-height: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;}
+}
+/*END Navbar*/
 
 /* Specific Forms */
 #student-form {
